# hasomed_rehastim_stimulator

./: CMakeLists.txt  README.md  package.xml
config/: CCL12F50.yaml  CCL14F50.yaml  CCL18F48.yaml  CCL18F50.yaml  CCL18F64.yaml  SINGLES.yaml  stim.yaml  stim_gait.yaml  stim_matrix.yaml  stim_trike.yaml  template.yaml
launch/: stimulator.launch
other/: manuals.txt
other/legacy/: stimulator_node_original.py
perspective/: EMA_Stim.perspective
scripts/: stimulator_node.py  stimulator_node_teste.py
scripts/ema/modules/: stimulator.py
scripts/modules/: stimulator.py
